layout broke in last commit, bugfix for layout

--- a/sites/all/themes/s2015/css/s2015.styles.css
+++ b/sites/all/themes/s2015/css/s2015.styles.css
@@ -4583,6 +4583,30 @@ html[xmlns] .slides {
   .footer-connecting-link:hover {
     color: #f6ed7a; }
 
+.l-main {
+  padding: 30px 0px 60px;
+  padding: 1.875rem 0rem 3.75rem; }
+
+.node-type-page .l-main, .node-type-for-submitters .l-main, .node-type-for-attendees .l-main, .node-type-event .l-main, .node-type-session .l-main {
+  max-width: 60em;
+  max-width: 60rem;
+  margin-left: auto;
+  margin-right: auto; }
+  .node-type-page .l-main:after, .node-type-for-submitters .l-main:after, .node-type-for-attendees .l-main:after, .node-type-event .l-main:after, .node-type-session .l-main:after {
+    content: " ";
+    display: block;
+    clear: both; }
+.node-type-page .l-content, .node-type-for-submitters .l-content, .node-type-for-attendees .l-content, .node-type-event .l-content, .node-type-session .l-content {
+  width: 74.57627%;
+  float: right;
+  margin-right: 0;
+  padding-left: 20px;
+  padding-left: 1.25rem; }
+.node-type-page .l-region--sidebar, .node-type-for-submitters .l-region--sidebar, .node-type-for-attendees .l-region--sidebar, .node-type-event .l-region--sidebar, .node-type-session .l-region--sidebar {
+  width: 23.72881%;
+  float: left;
+  margin-right: 1.69492%; }
+
 .block--views-slider-block {
   margin-bottom: 80px;
   margin-bottom: 5rem;
